:construction: Switching to BLT for display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ PROJECT(ProjectRLECS)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17")
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/blt)
 LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/flecs)
+LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/blt)
 
 FIND_PACKAGE(libtcod CONFIG REQUIRED)
 
@@ -27,5 +29,5 @@ FILE(GLOB all_SRCS
 ADD_DEFINITIONS(-w)
 
 ADD_EXECUTABLE(ProjectRLECS ${all_SRCS})
-TARGET_LINK_LIBRARIES(ProjectRLECS PRIVATE libtcod::libtcod flecs)
+TARGET_LINK_LIBRARIES(ProjectRLECS PRIVATE libtcod::libtcod flecs BearLibTerminal)
 #TARGET_LINK_LIBRARIES(ProjectRLECS PRIVATE libtcod::libtcod  ${CMAKE_SOURCE_DIR}/extlib/flecs/libflecs_static.a)
