--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17")
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/blt)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/random)
 LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/flecs)
 LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/extlib/blt)
 
